--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+.bg-color {
+  background-color: #e2e2e2 !important;
+}
+
+.bg-ligth {
+  background-color: #FFFF !important;
+}
+
+.links {
+  font-size: 17px;
+}
+
+.nav-link:hover{
+  color: #0d4496 !important;
+}
