feita a implementação das requisições

--- a/src/app/requisicoes/requisicao.component.html
+++ b/src/app/requisicoes/requisicao.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-12 col-md-10 col-lg-9 mx-auto mt-4 mb-4">
       <div class="btn-group">
-       / <button
+        <button
           routerLink="/requisicoes/funcionario"
           routerLinkActive="active"
           class=" btn btn-outline-primary"
