--- a/src/app/requisicoes/requisicoes-departamento/requisicoes-departamento.component.html
+++ b/src/app/requisicoes/requisicoes-departamento/requisicoes-departamento.component.html
@@ -1,7 +1,6 @@
 
 <div class="container">
   <div class="row">
-
     <div class="col-12 col-md-10 col-lg-9 mx-auto">
       <div class="text-center text-md-start">
         <h1 class="fw-bold text-primary">Requisições para meu Departamento</h1>
@@ -16,6 +15,97 @@
         </a>
       </div>
 
-    </div>
+      <div class="mt-4">
+        <table class="table table-light table-striped table-hover">
+          <thead class="thend-dark text-center">
+            <tr>
+              <th>Abertura</th>
+              <th>Departamento</th>
+              <th>Descricao</th>
+              <th>Equipamento</th>
+              <th>Status</th>
+              <th>Ultima Atualização</th>
+              <th>Ações</th>
+            </tr>
+          </thead>
+          <tbody class="text-center">
+            <tr *ngFor="let requisicao of (requisicoes$ | async)">
+              <td>{{ requisicao.dataAbertura.toDate() | date: 'dd/MM/yyyy HH:mm' }}</td>
+              <td>{{ requisicao.departamento?.nome}}</td>
+              <td>{{ requisicao.descricao }}</td>
+              <td>{{ requisicao.equipamento ? requisicao.equipamento.nome : "Não Selecionado"}}</td>
+              <td>{{ requisicao.status }}</td>
+              <td>{{ requisicao.ultimaAtualizacao.toDate()  | date: 'dd/MM/yyyy HH:mm' }}</td>
+              <td class="d-grid d-md-block">
+                <button
+                  (click)="gravar(modal, requisicao)"
+                  type="button"
+                  class="btn btn-primary me-0 me-md-1 md-1 mb-md-auto">
+                  <i class="pi pi-check-square"></i>
+                </button>
+                <button
+                  [routerLink]="['/requisicoes', requisicao.id]"
+                  type="button"
+                  class="btn btn-outline-primary">
+                  <i class="pi pi-tags"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+  </div>
 </div>
+
+
+<ng-template #modal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Movimentação de Requisição</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('fechar')"></button>
+  </div>
+  <form [formGroup]="form" (ngSubmit)="modal.close('enviar')">
+    <div class="modal-body">
+
+      <div class="form-group mb-3 position-relative">
+        <label for="funcionario" class="form-label">Funcionário Solicitante</label>
+        <p class="text-primary fw-semibold">{{ funcionarioLogado.nome }}</p>
+      </div>
+
+      <div class="form-group mb-3 position-relative">
+        <label for="equipamentoId" class="form-label">Equipamento</label>
+        <p class="fw-semibold">{{ requisicaoSelecionada.equipamento? requisicaoSelecionada.equipamento?.nome : "Não informado" }}</p>
+      </div>
+
+      <div class="form-group mb-3">
+        <label for="descricao" class="form-label">Descrição</label>
+        <p class="fw-semibold">{{ requisicaoSelecionada.descricao }}</p>
+      </div>
+
+      <div class="form-group mb-3">
+        <label for="descricao" class="form-label">Status</label>
+        <ng-select
+          placeholder="Status da requisição"
+          [searchable]="false"
+          [clearable]="false"
+          class="w-50"
+          formControlName="status"
+          [items]="listaStatus"
+        ></ng-select>
+      </div>
+
+      <div class="form-group mb-3 position-relative">
+        <label for="nome" class="form-label">Descrição da Movimentação</label>
+        <textarea formControlName="descricao"
+          class="form-control"
+          type="text"
+          placeholder="Digite a descrição da atualização"></textarea>
+      </div>
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-outline-primary col-md-3" (click)="modal.dismiss('fechar')">Cancelar</button>
+      <button type="submit" class="btn btn-primary col-md-3" [disabled]="this.form.invalid">Gravar</button>
+    </div>
+  </form>
+</ng-template>
 
