--- a/src/app/requisicoes/requisicoes-funcionario/requisicoes-funcionario.component.html
+++ b/src/app/requisicoes/requisicoes-funcionario/requisicoes-funcionario.component.html
@@ -41,9 +41,15 @@
               <td>{{ requisicao.equipamento ? requisicao.equipamento.nome : "Não Selecionado"}}</td>
               <td class="d-grid d-md-block">
                 <button
-                  (click)="gravar(modal, requisicao)"
+                  [routerLink]="['/requisicoes', requisicao.id]"
                   type="button"
                   class="btn btn-primary me-0 me-md-1 md-1 mb-md-auto">
+                  <i class="pi pi-tags"></i>
+                </button>
+                <button
+                  (click)="gravar(modal, requisicao)"
+                  type="button"
+                  class="btn btn-outline-primary me-0 me-md-1 md-1 mb-md-auto">
                   <i class="pi pi-user-edit"></i>
                 </button>
                 <button
@@ -57,6 +63,7 @@
           </tbody>
         </table>
       </div>
+
     </div>
   </div>
 </div>
