fiz: Ajustes no projeto

--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -10,7 +10,7 @@
             </h1>
 
             <p class="fs-4 mt-4">
-              Seja bem-vindo ao Sistema de Requisições da <span class="text-primary">Academia do Programador</span>
+              Seja bem-vindo ao Sistema de Requisições
             </p>
 
             <div class="d-grid d-lg-flex text-center gap-2 mt-5">
