--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand fw-semibold" routerLink="/">RequisicoesApp</a>
+    <a class="navbar-brand fw-semibold" routerLink="/">Infra Requisições</a>
     <button (click)="estaColapsada = !estaColapsada" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,7 +16,7 @@
             <a class="nav-link active text-primary" aria-current="page" routerLink="/equipamentos">Equipamentos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-primary" aria-current="page" routerLink="/funcionarios">Funcionários</a>
+            <a class="nav-link active text-primary" aria-current="page" routerLink="/funcionarios">Funcionários/Usuários</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active text-primary" aria-current="page" routerLink="/requisicoes">Requisições</a>
@@ -24,6 +24,7 @@
           <div class="ms-auto">
             <a role="button" class="btn btn-primary px-5" (click)="sair()">Sair</a>
           </div>
+
         </ul>
       </div>
 
